--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,24 @@
 #spring.datasource.platform=postgres
 #spring.jpa.show-sql=true
 
-  spring.jpa.database=POSTGRESQL
-  spring.sql.init.platform=postgres
-  spring.jpa.show-sql=false
-  spring.jpa.hibernate.ddl-auto=none
-  spring.database.driverClassName=org.postgresql.Driver
-  spring.datasource.url=jdbc:postgresql://tuffi.db.elephantsql.com:5432/qsvbmowk
-  spring.datasource.username=qsvbmowk
-  spring.datasource.password=Gv7CAU5-enBBRWy6QKng0mEtnYLPNcIs
+#H2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.jpa.show-sql=false
+#spring.jpa.hibernate.ddl-auto=create
+#spring.database.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:./src/main/java/com/santander/banco811
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+#Web Elephant
+spring.jpa.database=POSTGRESQL
+spring.sql.init.platform=postgres
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=none
+spring.database.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://tuffi.db.elephantsql.com:5432/qsvbmowk
+spring.datasource.username=qsvbmowk
+spring.datasource.password=Gv7CAU5-enBBRWy6QKng0mEtnYLPNcIs
+
+spring.jpa.defer-datasource-initialization=true
